--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,11 +1,12 @@
 .Footer {
-    padding-top: 10px;
-    margin-top: 2;
+    padding: 10px 0;
     text-align: center;
     font-size: smaller;
-}
-
-.Footer p {
+    margin-top: auto; /* This pushes the footer to the bottom */
+  }
+  
+  .Footer p {
     margin: 0;
-    padding: '0.5em 0';
-}
+    padding: 0.5em 0;
+  }
+  
